--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   Beim 2. Lauf in diesem Jahr waren nur wenige Fahrer zum Start angetreten.
   In der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse nur 2 Fahrer
-  an den Start. In der Kart-Klasse waren vor dem rennen zwei Fahrzeuge durch
+  an den Start. In der Kart-Klasse waren vor dem Rennen zwei Fahrzeuge durch
   technischen Defekt ausgefallen.
 </p>
 <p align="justify">
   In der Goggo-Klasse konnte Hubert Volks 2 Siege einfahren. Die weiteren Plätze
-  belegten Frank Langenhorst, Christoph Markfort und Andreas Pundmann
+  belegten Frank Langenhorst, Christoph Markfort und Andreas Punsmann
   und Tobias Hegemann.
 </p>
 <p align="justify">
