--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2023</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 29. Mai 2023</h3>
+<p align="justify">
+  Das traditionelle Pfingstmontag-Rennen konnte bei schönem Wetter durchgeführt
+  werden. Bei diesem 3. Lauf im Jahr waren erfreulich viele Fahrer zum Start
+  angetreten. In der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse 4 Fahrer
+  an den Start. Nach langer Pause trat Walter Huhn mit seinem Goggo nochmal an,
+  in der Kart-Klasse konnten wir Matthias Hüser als neuen Fahrer begrüßen.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte Hubert Volks im 1. Lauf, im 2. Lauf war Frank
+  Langenhorst erfolgreich. Die weiteren Plätze belegten Christoph Markfort und
+  Andreas Punsmann.
+</p>
+<p align="justify">
+  In der Kartklasse siegte Benjamin Schneider in beiden Läufen vor Victor Roh,
+  die weiteren Plätze belegten Matthias Hüser und Christian Kelwing.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2023.05.29_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2023.05.29_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Frank Langenhorst</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Christoph Markfort</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Matthias Hüser</li>
+      <li>4. Christian Kelwing</li>
+   </ul>
+</div>
+
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 7. Mai 2023</h3>
 <p align="justify">
   Beim 2. Lauf in diesem Jahr waren nur wenige Fahrer zum Start angetreten.
