--- a/termine.html
+++ b/termine.html
@@ -54,16 +54,17 @@ description:
       <tr>
         <td>August</td>
         <td>3. August</td>
-        <td>5. August EMC Sommerfest</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>September</td>
         <td>7. September</td>
-        <td>17. September 5. Rennen</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>5. Oktober</td>
+        <td>1. Oktober 5. Rennen</td>
         <td></td>
       </tr>
       <tr>
