--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2023</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 1. OktoberMai 2023</h3>
+<p align="justify">
+  Der 5. und letzte Lauf in diesem Jahr wurde leider nur unter sehr geringer
+  Beteiligung der Fahrer durchgeführt. In den einzelnen Klassen waren jeweils
+  nur 3 Fahrer mit ihren Fahrzeugen angetreten. Daher wurde jeweils nur ein
+  Lauf ddurchgeführt, welche auch noch durch Aufälle wegen technischer Defekte
+  geprägt waren. Von Tobias Hegemann wurde ein Elektro-Kart vorgestellt, welches
+  bei allen Anwesenden großes Interesse hervorgerufen hat.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte Hubert Volks vor Christoph Markfort und Tobias
+  Hegemann.
+</p>
+<p align="justify">
+  In der Kartklasse siegte Benjamin Schneider vor Victor Roh und Horst Primas.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2023.10.01_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2023.10.01_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Christoph Markfort</li>
+   		<li>3. Tobias Hegemann</li>
+   		<li></li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Horst Primas</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">3. Lauf um den Jahrespokal des EMC am 29. Mai 2023</h3>
 <p align="justify">
   Das traditionelle Pfingstmontag-Rennen konnte bei schönem Wetter durchgeführt
