--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Der 5. und letzte Lauf in diesem Jahr wurde leider nur unter sehr geringer
   Beteiligung der Fahrer durchgeführt. In den einzelnen Klassen waren jeweils
   nur 3 Fahrer mit ihren Fahrzeugen angetreten. Daher wurde jeweils nur ein
-  Lauf ddurchgeführt, welche auch noch durch Aufälle wegen technischer Defekte
+  Lauf durchgeführt, welche auch noch durch Aufälle wegen technischer Defekte
   geprägt waren. Von Tobias Hegemann wurde ein Elektro-Kart vorgestellt, welches
   bei allen Anwesenden großes Interesse hervorgerufen hat.
 </p>
@@ -23,6 +23,10 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 </p>
 <p align="justify">
   In der Kartklasse siegte Benjamin Schneider vor Victor Roh und Horst Primas.
+</p>
+p align="justify">
+  Mit dem letzetn Lauf stehen auch die Jahresieger fest. In der Goggo-Klasse
+  siegte Hubert Volks, in der Kartklasse siegte Benjamin Schneider.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
