--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   In der Kartklasse siegte Benjamin Schneider vor Victor Roh und Horst Primas.
 </p>
-p align="justify">
+<p align="justify">
   Mit dem letzetn Lauf stehen auch die Jahresieger fest. In der Goggo-Klasse
   siegte Hubert Volks, in der Kartklasse siegte Benjamin Schneider.
 </p>
