--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_10.23.jpg" alt="Protokoll 10.2023">
 <img src="img/intern/emc_vers_08.23.jpg" alt="Protokoll 08.2023">
 <img src="img/intern/emc_vers_05.23.jpg" alt="Protokoll 05.2023">
 <img src="img/intern/emc_vers_04.23.jpg" alt="Protokoll 04.2023">
