--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_02.24.jpg" alt="Protokoll 02.2024">
 <img src="img/intern/emc_vers_12.23_1.jpg" alt="Protokoll 12.2023_1">
 <img src="img/intern/emc_vers_12.23_2.jpg" alt="Protokoll 12.2023_2">
 <img src="img/intern/emc_vers_10.23.jpg" alt="Protokoll 10.2023">
