--- a/termine.html
+++ b/termine.html
@@ -22,60 +22,60 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>2. Februar</td>
+        <td>1. Februar</td>
         <td>-</td>
       </tr>
       <tr>
         <td>März</td>
-        <td>3. März</td>
+        <td>7. März</td>
         <td>-</td>
       </tr>
       <tr>
         <td>April</td>
-        <td>5. April</td>
-        <td>10. April 1. Rennen Ostermontag</td>
+        <td>4. April</td>
+        <td>1. April 1. Rennen Ostermontag<br>
+        28. April 2.Rennen</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>4. Mai</td>
-        <td>7. Mai 2. Rennen<br>
-        29. Mai 3. Rennen Pfingstmontag</td>
+        <td>2. Mai</td>
+        <td>20. Mai 3. Rennen Pfingstmontag</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>1. Juni</td>
-        <td>25. Juni 4. Rennen</td>
+        <td>6. Juni</td>
+        <td>23. Juni 4. Rennen</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>6. Juli</td>
+        <td>4. Juli</td>
         <td></td>
       </tr>
       <tr>
         <td>August</td>
-        <td>3. August</td>
+        <td>-</td>
         <td>-</td>
       </tr>
       <tr>
         <td>September</td>
-        <td>7. September</td>
-        <td>-</td>
+        <td>5. September</td>
+        <td>8. September 5. Rennen-</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>5. Oktober</td>
-        <td>1. Oktober 5. Rennen</td>
+        <td>10. Oktober</td>
+        <td>-</td>
         <td></td>
       </tr>
       <tr>
         <td>November</td>
-        <td>2. November</td>
+        <td>7. November</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>7. Dezember (Jahreshauptversammlung)<br>
-            17. Dezember (Weihnachtsfeier)</td>
+        <td>5. Dezember (Jahreshauptversammlung)<br>
+            15. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
     </tbody>
