--- a/termine.html
+++ b/termine.html
@@ -59,7 +59,7 @@ description:
       <tr>
         <td>September</td>
         <td>5. September</td>
-        <td>8. September 5. Rennen-</td>
+        <td>8. September 5. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
