--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@ title: Willkommen beim Erler Motor Club
 description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
 
-<!--                         Das Jahr 2022                                -->
+<!--                         Das Jahr 2024                                -->
+<!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2024</h2>
+
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 1. April 2024</h3>
+<p align="justify">
+  Die Rennsaison des EMC wurde planmäßig mit dem 1. Lauf am Ostermontag
+  gestartet. Trotz schlechten Wetters waren in beiden Klassen erfreulich viele
+  Fahrer mit ihren Fahrzeugen zum Start angetreten. Besonders die Kart-Klasse
+  wurde durch einige neue Fahrer bereichert. Am Nachmittag blieb das Wetters
+  trocken und auch etliche Zuschauer fanden den Weg zur Bahn.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte Christoph Markfort im ersten Lauf, im zweiten Lauf
+  war Hubert Volks erfolgreich. Die weiteren Plätze belegten Thomas Gerigk und
+  Dominik Bernstein.
+</p>
+<p align="justify">
+  In der Kartklasse hatte Benjamin Schneider mit Vergaserproblemen zu kämpfen.
+  Trotzdem konnte er den 1. Lauf für sich entscheiden. Im 2. Lauf belegte
+  Matthias Hüser den 1.Platz vor Christian Kellwing und Benjamin Schneider.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2024.04.01_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2024.04.01_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Christoph Markfort</li>
+   		<li>3. Thomas Gerigk</li>
+   		<li>4. Dominik Bernstein</li>
+   		<li>1. Matthias Hüser</li>
+      <li>2. Christian Kellwing</li>
+      <li>3. Benjamin Schneider</li>
+      <li></li>
+   </ul>
+</div>
+
+<!--                         Das Jahr 2023                                -->
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2023</h2>
 
