--- a/ergebnisse.html
+++ b/ergebnisse.html
@@ -6,7 +6,7 @@ description:
 
 <!--               aktuelle Punktetabelle vom laufenden Jahr                 -->
 <!----------------------------------------------------------------------------->
-<img src="img/punkte/punkte_2023.jpg" alt="aktuelle Punktetabelle">
+<img src="img/punkte/punkte_2024.jpg" alt="aktuelle Punktetabelle">
 
 <!--               Tabelle der Jahressieger (letzte 5 Jahre)                 -->
 <!----------------------------------------------------------------------------->
@@ -19,6 +19,11 @@ description:
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>2023</td>
+      <td>Hubert Volks</td>
+      <td>Benjamin Schneider</td>
+    </tr>
     <tr>
       <td>2022</td>
       <td>Matthias Schulte-Bocholt</td>
