--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2024</h2>
 
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 28. April 2024</h3>
+<p align="justify">
+  Der 2. Renntag des EMC fand bei trockenem Wetter auf der Bahn statt. Wie
+  schon beim 1. Rennen brachten in der Kart-Klasse erfreulich viele Fahrer
+  ihre Fharzeuge an den Start und sorgten für spannende Rennläufe.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte Hubert Volks in beiden Läufen. Die weiteren Plätze
+  für den Tagessieg belegten Frank Langenhorst, Fabian Heiming und Andreas
+  Punsmann.
+</p>
+<p align="justify">
+  In der Kartklasse lieferten sich Benjamin Schneider und Matthias Hüser einen
+  harten Wettkampf. Benjamin war in beiden Läufen erfolgreich vor Matthias.
+  Den 3. Platz belegte Mika Schröder vor Niclas Hüser.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2024.04.28_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2024.04.28_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Frank Langenhorst</li>
+   		<li>3. Fabian Heiming</li>
+   		<li>4. Andreas Punsmann/li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Matthias Hüser</li>
+      <li>3. Mika Schröder</li>
+      <li>4. Niclas Hüser</li>
+   </ul>
+</div>
+
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 1. April 2024</h3>
 <p align="justify">
   Die Rennsaison des EMC wurde planmäßig mit dem 1. Lauf am Ostermontag
