--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   Der 2. Renntag des EMC fand bei trockenem Wetter auf der Bahn statt. Wie
   schon beim 1. Rennen brachten in der Kart-Klasse erfreulich viele Fahrer
-  ihre Fharzeuge an den Start und sorgten für spannende Rennläufe.
+  ihre Fahrzeuge an den Start und sorgten für spannende Rennläufe.
 </p>
 <p align="justify">
   In der Goggo-Klasse siegte Hubert Volks in beiden Läufen. Die weiteren Plätze
@@ -39,7 +39,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
     	<li>1. Hubert Volks</li>
    		<li>2. Frank Langenhorst</li>
    		<li>3. Fabian Heiming</li>
-   		<li>4. Andreas Punsmann/li>
+   		<li>4. Andreas Punsmann</li>
    		<li>1. Benjamin Schneider</li>
       <li>2. Matthias Hüser</li>
       <li>3. Mika Schröder</li>
