--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,9 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_05.24.jpg" alt="Protokoll 05.2024">
+<img src="img/intern/emc_statuten.jpg" alt="Statuten">
+<img src="img/intern/emc_ausschreibung.jpg" alt="Ausschreibung">
 <img src="img/intern/emc_vers_03.24.jpg" alt="Protokoll 03.2024">
 <img src="img/intern/emc_vers_02.24.jpg" alt="Protokoll 02.2024">
 <img src="img/intern/emc_vers_12.23_1.jpg" alt="Protokoll 12.2023_1">
