--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2024</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 20. Mail 2024</h3>
+<p align="justify">
+  Der Renntag am Pfingstmontag fand bei trockenem und sommerlichem Wetter statt.
+  In beiden Klassen gingen erfreulich viele Fahrer mit ihren Fahrzeuge an den
+  Start. In den Spitzengruppen lagen die Leistungen eng beieinander und wird
+  konnten spannende Rennläufe beobachten.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Matthias Schulte-Bocholt das Training nicht beenden,
+  da er durch einen Brand in der Fahrzeugelektrik ausfgeben musste. Er konnte
+  sein Fahrzeug bis zum Rennbeginn aber wieder reparieren und siegte in beiden
+  Läufen. Die weiteren Plätze für den Tagessieg belegten Frank Langenhorst,
+  Hubert Volks und Fabian Heiming.
+</p>
+<p align="justify">
+  In der Kartklasse bot sich ein ähnliches Bild. Benjamin Schneider konnte
+  wegen Vergaserproblemen ebenfalls keine gute Trainingszeit vorweisen. Zum
+  Rennen war sein Kart aber wieder einsatzbereit und er konnte 2 Siege einfahren.
+  Matthias Hüser in beiden Läufen nur knapp dahinter auf dem 2. Platz, dahinter
+  fuhren Marcel Kerkhoff und Christian Kellwing ins Ziel.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2024.05.20_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2024.05.20_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Frank Langenhorst</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Fabian Heiming</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Matthias Hüser</li>
+      <li>3. Marcel Kerkhoff</li>
+      <li>4. Christian Kellwing</li>
+   </ul>
+</div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 28. April 2024</h3>
 <p align="justify">
   Der 2. Renntag des EMC fand bei trockenem Wetter auf der Bahn statt. Wie
