--- a/index.html
+++ b/index.html
@@ -8,11 +8,52 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2024</h2>
 
-<h3 align="center">3. Lauf um den Jahrespokal des EMC am 20. Mail 2024</h3>
+<h3 align="center">4. Lauf um den Jahrespokal des EMC am 23. Juni 2024</h3>
+<p align="justify">
+  Der 4. Renntag am Sommeranfang fand bei sommerlichen Temperaturen statt.
+  In der Goggo-Klasse gingen 5 Fahrer mit ihren Fahrzeuge an den Start, bei
+  den Karts waren es 4 Fahrzeuge. In den Spitzengruppen lagen die Leistungen
+  eng beieinander und wir konnten spannende Rennläufe beobachten.
+</p>
+<p align="justify">
+  In der Goggo-Klasse lag Hubert Volks nach dem Qualifying noch vorne, musste
+  sich aber in beiden Rennläufen Frank Langenhorst geschlagen geben. Die weiteren
+  Plätze für den Tagessieg belegten Fabian Heiming, Dominik Bernstein und
+  Tobias Hegemann.
+</p>
+<p align="justify">
+  In der Kartklasse lag Benjamin Schneider nach dem Training und im ersten Lauf
+  vorne, den 2. Lauf konnte Matthias Hüser für sich entscheiden. Die weiteren
+  Plätze für den Tagessieg belegten Marcel Kerkhoff und Mika Schröder.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2024.06.23_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2024.06.23_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Frank Langenhorst</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Fabian Heiming</li>
+   		<li>4. Dominik Bernstein</li>
+   		<li>1. Matthias Hüser</li>
+      <li>2. Benjamin Schneider</li>
+      <li>3. Marcel Kerkhoff</li>
+      <li>4. Mika Schröder</li>
+   </ul>
+</div>
+
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 20. Mai 2024</h3>
 <p align="justify">
   Der Renntag am Pfingstmontag fand bei trockenem und sommerlichem Wetter statt.
   In beiden Klassen gingen erfreulich viele Fahrer mit ihren Fahrzeuge an den
-  Start. In den Spitzengruppen lagen die Leistungen eng beieinander und wird
+  Start. In den Spitzengruppen lagen die Leistungen eng beieinander und wir
   konnten spannende Rennläufe beobachten.
 </p>
 <p align="justify">
