--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_08.24.jpg" alt="Protokoll 08.2024">
 <img src="img/intern/emc_vers_05.24.jpg" alt="Protokoll 05.2024">
 <img src="img/intern/emc_statuten.jpg" alt="Statuten">
 <img src="img/intern/emc_ausschreibung.jpg" alt="Ausschreibung">
