--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2024</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 29. September 2024</h3>
+<p align="justify">
+  Der 5. Renntag am Herbstanfang fand bei guten trockenen Wetterbidingungen statt.
+  In der Goggo-Klasse gingen 4 Fahrer mit ihren Fahrzeugen an den Start, bei
+  den Karts waren es 6 Fahrzeuge. Wir konnten spannende Rennen sehen, leider
+  aber auch geprägt durch viele Ausfälle.
+</p>
+<p align="justify">
+  In der Goggo-Klasse lag Hubert Volks nach dem Qualifying noch vorne, musste
+  sich aber in beiden Rennläufen Christoph Markfort geschlagen geben. Die weiteren
+  Plätze für den Tagessieg belegten Fabian Heiming und Andreas Punsmann.
+</p>
+<p align="justify">
+  In der Kartklasse lag Matthias Hüser nach dem Training  vorne, die beiden
+  Rennläufe konnte jedoch Benjamin Schneider für sich entscheiden. Die weiteren
+  Plätze für den Tagessieg belegten Marcel Kerkhoff, Niki Hüser und Mika Schröder.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2024.09.29_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2024.09.29_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Christoph Markfort</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Fabian Heiming</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Marcel Kerkhoff</li>
+      <li>3. Niki Hüser</li>
+      <li>4. Mika Schröder</li>
+   </ul>
+</div>
+<p align="justify">
+  Mit dem letzen Renntag stehen auch die Jahressieger 2024 fest.
+  Wir gratulieren zum Jahrespokal:
+</p>
+<p align="center">
+  Goggo-Klasse:	Matthias Schulte-Bocholt
+<br>
+  Kart-Klasse:	Victor Roh
+</p>
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 23. Juni 2024</h3>
 <p align="justify">
   Der 4. Renntag am Sommeranfang fand bei sommerlichen Temperaturen statt.
