--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 
 <h3 align="center">5. Lauf um den Jahrespokal des EMC am 29. September 2024</h3>
 <p align="justify">
-  Der 5. Renntag am Herbstanfang fand bei guten trockenen Wetterbidingungen statt.
+  Der 5. Renntag am Herbstanfang fand bei guten trockenen Wetterbedingungen statt.
   In der Goggo-Klasse gingen 4 Fahrer mit ihren Fahrzeugen an den Start, bei
   den Karts waren es 6 Fahrzeuge. Wir konnten spannende Rennen sehen, leider
   aber auch geprägt durch viele Ausfälle.
@@ -52,9 +52,9 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Wir gratulieren zum Jahrespokal:
 </p>
 <p align="center">
-  Goggo-Klasse:	Matthias Schulte-Bocholt
+  Goggo-Klasse:	Hubert Volks
 <br>
-  Kart-Klasse:	Victor Roh
+  Kart-Klasse:	Benjamin Schneider
 </p>
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 23. Juni 2024</h3>
 <p align="justify">
