--- a/ergebnisse.html
+++ b/ergebnisse.html
@@ -25,6 +25,11 @@ description:
       <td>Benjamin Schneider</td>
     </tr>
     <tr>
+      <td>2023</td>
+      <td>Hubert Volks</td>
+      <td>Benjamin Schneider</td>
+    </tr>
+    <tr>
       <td>2022</td>
       <td>Matthias Schulte-Bocholt</td>
       <td>Victor Roh</td>
