--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2024
+title: Termine 2025
 description:
 ---
 
@@ -22,29 +22,28 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>1. Februar</td>
+        <td>6. Februar</td>
         <td>-</td>
       </tr>
       <tr>
         <td>März</td>
-        <td>7. März</td>
+        <td>6. März</td>
         <td>-</td>
       </tr>
       <tr>
         <td>April</td>
-        <td>4. April</td>
-        <td>1. April 1. Rennen Ostermontag<br>
-        28. April 2.Rennen</td>
+        <td>3. April</td>
+        <td>21. April 1. Rennen Ostermontag</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>2. Mai</td>
-        <td>20. Mai 3. Rennen Pfingstmontag</td>
+        <td>8. Mai</td>
+        <td>25. Mai 2. Rennen (Vorschlag)</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>6. Juni</td>
-        <td>23. Juni 4. Rennen</td>
+        <td>5. Juni</td>
+        <td>9. Juni 3. Rennen  Pfingstrennen</td>
       </tr>
       <tr>
         <td>Juli</td>
@@ -58,24 +57,24 @@ description:
       </tr>
       <tr>
         <td>September</td>
-        <td>5. September</td>
-        <td>29. September 5. Rennen</td>
+        <td>4. September</td>
+        <td>7. September 4. Rennen (Vorschlag)</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>-</td>
-        <td>-</td>
+        <td>2. Oktober</td>
+        <td>5. Oktober 5. Rennen (Vorschlag)</td>
         <td></td>
       </tr>
       <tr>
         <td>November</td>
-        <td>7. November</td>
+        <td>6. November</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>5. Dezember (Jahreshauptversammlung)<br>
-            15. Dezember (Weihnachtsfeier)</td>
+        <td>4. Dezember (Jahreshauptversammlung)<br>
+            20. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
     </tbody>
