--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_03.25.jpg" alt="Protokoll 03.2025">
 <img src="img/intern/emc_vers_02.25.jpg" alt="Protokoll 02.2025">
 <img src="img/intern/emc_vers_12.24.jpg" alt="Protokoll 12.2024">
 <img src="img/intern/emc_vers_09.24.jpg" alt="Protokoll 09.2024">
