--- a/index.html
+++ b/index.html
@@ -3,6 +3,58 @@ layout: default
 title: Willkommen beim Erler Motor Club
 description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
+<!--                         Das Jahr 2025                                -->
+<!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2025</h2>
+
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 21. April 2025</h3>
+<p align="justify">
+  Die Rennsaison des EMC wurde traditionell mit dem 1. Lauf am Ostermontag
+  gestartet. Der vorhergesagte Regen blieb aus und wir konnten bei trockenem
+  Wetter eine schönen Nachmittag verbringen. In beiden Klassen hatten erfreulich
+  viele  Fahrer ihre Fahrzeuge an den Start gebracht. Besonders die Kart-Klasse
+  wurde durch die neuen Fahrer bereichert. Auch hatten erfreulich viele
+  Zuschauer den Weg zur Bahn gefunden.
+</p>
+<p align="justify">
+  In der Goggo-Klasse errang Hubert Volks einen Doppelsieg, Christoph Markfort
+  belegte jeweils den zweiten Platz. Auf den weiteren Plätzen folgten Fabian
+  Heiming und Andreas Punsmann. Walter Huhn war nach längerer Zeit auch wieder
+  am Start, im ersten Lauf belegte er den vierten Platz und musste im zweiten
+  Lauf wegen technischer Probleme leider aufgeben.
+
+</p>
+<p align="justify">
+  In der Kartklasse hatte alle Fahrer ihre Karts optimal vorbereitet und
+  lieferten sich spannende Rennen. Benjamin Schneider war in beiden Rennläufen
+  erfolgreich, aug den weiteren Plätzen folgten Marcel Kerkhoff, Matthias Hüser
+  und Christian Kellwing.
+</p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2025.04.21_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2025.04.21_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Christoph Markfort</li>
+   		<li>3. Fabian Heiming</li>
+   		<li>4. Andreas Punsmann</li>
+      <li>1. Benjamin Schneider</li>
+      <li>2. Marcel Kerhoff</li>
+      <li>3. Matthias Hüser</li>
+      <li>4. Christian Kellwing</li>
+      <li></li>
+   </ul>
+</div>
+
 
 <!--                         Das Jahr 2024                                -->
 <!-------------------------------------------------------------------------->
