--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   In der Kartklasse hatte alle Fahrer ihre Karts optimal vorbereitet und
   lieferten sich spannende Rennen. Benjamin Schneider war in beiden Rennläufen
-  erfolgreich, aug den weiteren Plätzen folgten Marcel Kerkhoff, Matthias Hüser
+  erfolgreich, auf den weiteren Plätzen folgten Marcel Kerkhoff, Matthias Hüser
   und Christian Kellwing.
 </p>
 
