--- a/termine.html
+++ b/termine.html
@@ -38,12 +38,12 @@ description:
       <tr>
         <td>Mai</td>
         <td>8. Mai</td>
-        <td>25. Mai 2. Rennen (Vorschlag)</td>
+        <td></td>
       </tr>
       <tr>
         <td>Juni</td>
         <td>5. Juni</td>
-        <td>9. Juni 3. Rennen  Pfingstrennen</td>
+        <td>9. Juni 2. Rennen  Pfingstrennen</td>
       </tr>
       <tr>
         <td>Juli</td>
@@ -53,17 +53,17 @@ description:
       <tr>
         <td>August</td>
         <td>-</td>
-        <td>-</td>
+        <td>18. August 3. Rennen, Samstag mit anschließendem Grillabend</td>
       </tr>
       <tr>
         <td>September</td>
         <td>4. September</td>
-        <td>7. September 4. Rennen (Vorschlag)</td>
+        <td>7. September 4. Rennen</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>2. Oktober</td>
-        <td>5. Oktober 5. Rennen (Vorschlag)</td>
+        <td>5. Oktober 5. Rennen</td>
         <td></td>
       </tr>
       <tr>
