--- a/index.html
+++ b/index.html
@@ -7,6 +7,53 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2025</h2>
 
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 9. Juni 2025</h3>
+<p align="justify">
+  Der 2. Lauf um den EMC Jahrespokal fand am Pfingstmontag statt. Der Wetter
+  blieb trocken und wir hatten bei mäßig warmen Temperaturen optimale
+  Fahrbedingungen. In der Goggo-Klasse gingen 6 Fahrzeuge an den Start, die
+  Kartfahrer hatten ebenfalls 6 Fahrzeuge an den Start gebracht. Wir haben uns
+  über die vielen Zuschauergefreut, die den Weg zur Bahn gefunden.
+</p>
+<p align="justify">
+  In der Goggo-Klasse war nach längerer Pause Matthias Schulte-Bocholt wieder
+  am Start und errang promt einen Doppelsieg. Hubert Volks belegte jeweils den
+  zweiten Platz. Auf den weiteren Plätzen folgten Fabian Heiming und Frank
+  Langenhorst. Andreas Punsmann und Christoph Markfort hatten mit technischen
+  Problemen zu kämpfen und konnten am 2. Lauf nicht mehr teilnehmen.
+
+</p>
+<p align="justify">
+  In der Kartklasse hatten einige Fahrer auch technische Probleme, daher mussten
+  Benjamin Schneider undChristian Kellwing auf den 2. Lauf verzichten. Marcel
+  Kerkhoff gewann beide Läufe, auf den weiteren Plätzen folgten Niclas und
+  Matthias Hüser sowie Horst Primas.
+</p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2025.06.09_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2025.06.09_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte Bocholt</li>
+   		<li>2. Fabian Heiming</li>
+   		<li>3. Frank Langenhorst</li>
+   		<li>4. Hubert Volks</li>
+      <li>1. Marcel Kerkhoff</li>
+      <li>2. Niclas Hüser</li>
+      <li>3. Matthias Hüser</li>
+      <li>4. Horst Primass</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 21. April 2025</h3>
 <p align="justify">
   Die Rennsaison des EMC wurde traditionell mit dem 1. Lauf am Ostermontag
