--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   blieb trocken und wir hatten bei mäßig warmen Temperaturen optimale
   Fahrbedingungen. In der Goggo-Klasse gingen 6 Fahrzeuge an den Start, die
   Kartfahrer hatten ebenfalls 6 Fahrzeuge an den Start gebracht. Wir haben uns
-  über die vielen Zuschauergefreut, die den Weg zur Bahn gefunden.
+  über die vielen Zuschauer gefreut, die den Weg zur Bahn gefunden.
 </p>
 <p align="justify">
   In der Goggo-Klasse war nach längerer Pause Matthias Schulte-Bocholt wieder
-  am Start und errang promt einen Doppelsieg. Hubert Volks belegte jeweils den
-  zweiten Platz. Auf den weiteren Plätzen folgten Fabian Heiming und Frank
-  Langenhorst. Andreas Punsmann und Christoph Markfort hatten mit technischen
-  Problemen zu kämpfen und konnten am 2. Lauf nicht mehr teilnehmen.
+  am Start und errang promt einen Doppelsieg. Auf den weiteren Plätzen folgten
+  Fabian Heiming, Frank Langenhorst und Hubert Volks. Andreas Punsmann und
+  Christoph Markfort hatten mit technischen Problemen zu kämpfen und konnten
+  am 2. Lauf nicht mehr teilnehmen.
 
 </p>
 <p align="justify">
   In der Kartklasse hatten einige Fahrer auch technische Probleme, daher mussten
-  Benjamin Schneider undChristian Kellwing auf den 2. Lauf verzichten. Marcel
+  Benjamin Schneider und Christian Kellwing auf den 2. Lauf verzichten. Marcel
   Kerkhoff gewann beide Läufe, auf den weiteren Plätzen folgten Niclas und
   Matthias Hüser sowie Horst Primas.
 </p>
