--- a/mitglieder.html
+++ b/mitglieder.html
@@ -102,12 +102,28 @@ title: Die Mitglieder unseres Vereins
      <img src="img/mitglieder/benjamin_schneider_2017.jpg" alt="B. Schneider" />
      <figcaption>Benjamin Schneider</figcaption>
   </figure>
-  <figure class="mitglied">
-     <img src="img/mitglieder/hartmut_kehring_2017.jpg" alt="H. Kehring" />
-     <figcaption>Hartmut Kehring</figcaption>
-  </figure>
-  <figure class="mitglied">
+    <figure class="mitglied">
      <img src="img/mitglieder/victor_roh_2016.jpg" alt="V. Roh" />
      <figcaption>Victor Roh</figcaption>
   </figure>
+  <figure class="mitglied">
+     <img src="img/mitglieder/matthias_hüser_2024.jpg" alt="M. Hüser" />
+     <figcaption>Matthias Hüser</figcaption>
+  </figure>
+  <figure class="mitglied">
+     <img src="img/mitglieder/niclas_hüser_2024.jpg" alt="N. Hüser" />
+     <figcaption>Niclas Hüser</figcaption>
+  </figure>
+  <figure class="mitglied">
+   <img src="img/mitglieder/marcel_kerkhoff_2024.jpg" alt="M. Kerkhoff" />
+   <figcaption>Marcel Kerkhoff</figcaption>
+</figure>
+  <figure class="mitglied">
+     <img src="img/mitglieder/mika_schröder_2024.jpg" alt="M. Schröder" />
+     <figcaption>Mika Schröder</figcaption>
+  </figure>
+  <figure class="mitglied">
+   <img src="img/mitglieder/christian_kellwing_2024.jpg" alt="C. Kellwing" />
+   <figcaption>Christian Kellwing</figcaption>
+</figure>
 </div>
