--- a/index.html
+++ b/index.html
@@ -7,6 +7,56 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2025</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 16. August 2025</h3>
+<p align="justify">
+  Der 3. Lauf um den EMC-Jahrespokal fand an einem Samstag mit anschließendem
+  Grillabend statt. Die hochsommerlichen Temperaturen der letzten Tage hatten
+  sich etwas abgekühlt und wir konnten bei angenehmem Wetter eine schönen
+  Nachmittag verbringen. Bedingt wohl durch die Ferienzeit gingen in der
+  Goggo-Klasse nur 3 Fahrzeuge an den Start, die Kartfahrer waren mit 4
+  Fahrzeugen vertreten.
+</p>
+
+<p align="justify">
+  In der Goggo-Klasse waren die Ergebnisse vom Training bis zum 2. Lauf
+  identisch, Matthias Schulte-Bocholt belegte in allen Läufen den 1. Platz,
+  Frank Langenhorst und Hubert Volks folgten auf den weiteren Plätzen.
+  
+</p>
+<p align="justify">
+  In der Kartklasse erlebten wir spannende Kämpfe um die ersten Plätze. Im
+  1. Lauf konnte sich Benjamin Schneider durchsetzen, fiel aber im 2. Lauf 
+  wegen technischer Probleme aus. Den 2. Lauf führte Marcel Kerkhoff bis 
+  kurz vor Schluss an, geriet dann aber von der Strecke ab und musste Niclas 
+  Hüser den Sieg überlassen. Auf den weiteren Plätzen folgten Benjamin Schneider
+  und Matthias Hüser.
+</p>
+  
+
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2025.08.16_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2025.08.16_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte Bocholt</li>
+   		<li>2. Frank Langenhorst
+      <li>3. Hubert Volks</li>
+   		<li>4. - </li>
+      <li>1. Niclas Hüser</li>
+      <li>2. Marcel Kerkhoff</li>
+      <li>3. Benjamin Schneider</li>
+      <li>4. Matthias Hüser</li>
+      <li></li>
+   </ul>
+</div>
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 9. Juni 2025</h3>
 <p align="justify">
   Der 2. Lauf um den EMC Jahrespokal fand am Pfingstmontag statt. Der Wetter
