--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2025</h2>
 
+<h3 align="center">4. Lauf um den Jahrespokal des EMC am 07. September 2025</h3>
+<p align="justify">
+  Der 4. Lauf um den EMC-Jahrespokal fand bei hochsommerlichen Temperaturen 
+  statt. In der Goggo-Klasse gingennur 3 Fahrzeuge an den Start, die Kartfahrer
+  waren mit 5 Fahrzeugen vertreten.
+</p>
+
+<p align="justify">
+  In der Goggo-Klasse waren die Ergebnisse vom Training bis zum 2. Lauf
+  identisch, Hubert Volks belegte in allen Läufen den 1. Platz, auf dem
+  2. Platz folgte Tobias Hegemann. Hubert Volks ist damit der Jahresieg 
+  nicht mehr zu nehmen.
+  
+</p>
+<p align="justify">
+  In der Kartklasse erlebten wir wiederspannende Kämpfe um die ersten Plätze.
+  In beiden Läufen sieget Marcel Kerkhoff, gefolgt von Benjamin Schneider.
+  Den 3. Platz belegte Matthias Hüser, Noah als neuer Fahrer landete auf dem
+  4. Platz.
+  
+</p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2025.09.07_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2025.09.07_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Hubert Volks</li>
+   		<li>2. Tobias Hegemann
+      <li>3. - </li>
+   		<li>4. - </li>
+      <li>1. Marcel Kerkhoff</li>
+      <li>2. Benjamin Schneider</li>
+      <li>3. Matthias Hüser</li>
+      <li>4. Noah</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">3. Lauf um den Jahrespokal des EMC am 16. August 2025</h3>
 <p align="justify">
   Der 3. Lauf um den EMC-Jahrespokal fand an einem Samstag mit anschließendem
@@ -31,8 +77,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Hüser den Sieg überlassen. Auf den weiteren Plätzen folgten Benjamin Schneider
   und Matthias Hüser.
 </p>
-  
-
 
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
@@ -57,6 +101,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
       <li></li>
    </ul>
 </div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 9. Juni 2025</h3>
 <p align="justify">
   Der 2. Lauf um den EMC Jahrespokal fand am Pfingstmontag statt. Der Wetter
