--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2025</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 12. Oktober 2025</h3>
+<p align="justify">
+  Der Jahressieger in der Goggo-Klasse stand schon seit dem 4. rennen fest,
+  daher war die Goggo-Klasse bei diesem letzten Lauf nur mit 3 Fahrzeugen
+  vertreten. In der Kart-Klasse konnte Marcel Kerkhoff seinen Siegeslauf
+  fortsetzen und sich den Jahressiegsichern.
+ </p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2025.12.10_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2025.12.10_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. FrankLangenhorst</li>
+   		<li>2. Christian Kellwing</li>
+      <li>3. Tobias Hegemann </li>
+   		<li>4. - </li>
+      <li>1. Matthias Hüser</li>
+      <li>2. Niklas Hüser</li>
+      <li>3. Marcel Kerkhoff</li>
+      <li>4. - </li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 07. September 2025</h3>
 <p align="justify">
   Der 4. Lauf um den EMC-Jahrespokal fand bei hochsommerlichen Temperaturen 
