--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,8 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_12.25_1.jpg" alt="Protokoll 12.2025">
+<img src="img/intern/emc_vers_12.25_2.jpg" alt="Protokoll 12.2025">
 <img src="img/intern/emc_vers_09.25.jpg" alt="Protokoll 09.2025">
 <img src="img/intern/emc_vers_08.25.jpg" alt="Protokoll 08.2025">
 <img src="img/intern/emc_vers_04.25.jpg" alt="Protokoll 04.2025">
